UF-17978-Spring-boot-4: Remove unnessecary abstraction in favor of more direct springboot problem handling
