# dept44-starter/src/main/java/se/sundsvall/dept44/exception/ServerProblem.java
@@ -1,17 +1,17 @@
 package se.sundsvall.dept44.exception;
 
-import se.sundsvall.dept44.problem.AbstractThrowableProblem;
+import org.springframework.http.HttpStatus;
 import se.sundsvall.dept44.problem.Problem;
-import se.sundsvall.dept44.problem.StatusType;
+import se.sundsvall.dept44.problem.ThrowableProblem;
 import tools.jackson.databind.annotation.JsonDeserialize;
 
 /**
  * A ThrowableProblem to be used in case of server side problems (i.e., HTTP 5xx).
  */
 @JsonDeserialize // Override inherited @JsonDeserialize annotation
-public class ServerProblem extends AbstractThrowableProblem {
+public class ServerProblem extends ThrowableProblem {
 
-	public ServerProblem(final StatusType status, final String detail) {
-		super(Problem.DEFAULT_TYPE, status.getReasonPhrase(), status, detail);
+	public ServerProblem(final HttpStatus status, final String detail) {
+		super(Problem.DEFAULT_TYPE, status.getReasonPhrase(), status, detail, null);
 	}
 }
